--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Kemiskinan</title>
+    <title>Bahtera - Per Daerah</title>
     <link rel="stylesheet" href="/src/output.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
@@ -45,7 +45,7 @@
           class="flex items-center space-x-3 rtl:space-x-reverse"
         >
           <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-black"
+            class="self-center text-2xl font-semibold whitespace-nowrap text-white"
             id="logo"
             >Web Kemiskinan</span
           >
@@ -53,7 +53,7 @@
         <button
           data-collapse-toggle="navbar-menu"
           type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-black rounded-lg md:hidden focus:outline-none"
+          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg md:hidden focus:outline-none"
           aria-controls="navbar"
           aria-expanded="false"
           id="toggle"
@@ -82,14 +82,14 @@
             <li>
               <a
                 href="beranda.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Beranda</a
               >
             </li>
             <li
               id="dropdownNavbarLink"
               data-dropdown-toggle="dropdownNavbar"
-              class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between"
+              class="py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between"
             >
               Data Kemiskinan
               <svg
@@ -136,21 +136,21 @@
             <li>
               <a
                 href="program.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Program</a
               >
             </li>
             <li>
               <a
                 href="laporan.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Laporan</a
               >
             </li>
             <li>
               <a
                 href="tentangKami.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Tentang Kami</a
               >
             </li>
@@ -394,7 +394,7 @@
                 Banten
               </th>
               <td class="px-6 py-4">5.69%</td>
-              <td class="px-6 py-4">6.64%</td>
+              <td class="px-6 py-4">6.44%</td>
               <td class="px-6 py-4">5.84%</td>
             </tr>
             <tr class="bg-white border-b hover:bg-gray-300">
@@ -493,7 +493,7 @@
               >
                 Sulawesi Utara
               </th>
-              <td class="px-6 py-4">4.73%</td>
+              <td class="px-6 py-4">4.75%</td>
               <td class="px-6 py-4">10.35%</td>
               <td class="px-6 py-4">7.25%</td>
             </tr>
@@ -582,7 +582,7 @@
                 Papua Barat
               </th>
               <td class="px-6 py-4">8.17%</td>
-              <td class="px-6 py-4">24.68%</td>
+              <td class="px-6 py-4">27.68%</td>
               <td class="px-6 py-4">21.66%</td>
             </tr>
             <tr class="bg-white border-b hover:bg-gray-300">
