--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -19,7 +19,7 @@
         <button
           data-collapse-toggle="navbar-menu"
           type="button"
-          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-black rounded-lg md:hidden focus:outline-none"
+          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg md:hidden focus:outline-none"
           aria-controls="navbar"
           aria-expanded="false"
           id="toggle">
