--- a/content/beranda.html
+++ b/content/beranda.html
@@ -17,22 +17,10 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav
-      class="bg-transparent fixed z-10 w-full transition duration-300 ease-in-out"
-      id="navbar"
-    >
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-      >
-        <a
-          href="beranda.html"
-          class="flex items-center space-x-3 rtl:space-x-reverse"
-        >
-          <span
-            class="self-center text-4xl italic font-sans font-semibold whitespace-nowrap text-white"
-            id="logo"
-            >Bahtera</span
-          >
+    <nav class="bg-transparent fixed z-10 w-full transition duration-300 ease-in-out" id="navbar">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="self-center text-4xl italic font-sans font-semibold whitespace-nowrap text-white" id="logo">Bahtera</span>
         </a>
         <button
           data-collapse-toggle="navbar-menu"
@@ -40,108 +28,66 @@
           class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg md:hidden focus:outline-none"
           aria-controls="navbar"
           aria-expanded="false"
-          id="toggle"
-        >
+          id="toggle">
           <span class="sr-only">menu</span>
           <svg
             class="w-5 h-5"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
-            viewBox="0 0 17 14"
-          >
+            viewBox="0 0 17 14">
             <path
               stroke="currentColor"
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15"
-            />
+              d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-menu">
-          
-          <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0"
-          >
-          <li></li>
-            <a
-              href="beranda.html"
-              class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 underline underline-offset-8 nav-link"
-              >Beranda</a
-            >
-          </li>
+          <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0">
+            <li>
+              <a href="beranda.html" class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 underline underline-offset-8 nav-link">Beranda</a>
+            </li>
             <li
-              
                 id="dropdownNavbarLink"
                 data-dropdown-toggle="dropdownNavbar"
-                class="py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600  nav-link flex cursor-pointer items-center justify-between"
-              >
+                class="py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600  nav-link flex cursor-pointer items-center justify-between">
                 Data Kemiskinan
                 <svg
                   class="w-2.5 h-2.5 ms-2.5"
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
-                  viewBox="0 0 10 6"
-                >
+                  viewBox="0 0 10 6">
                   <path
                     stroke="currentColor"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="m1 1 4 4 4-4"
-                  />
+                    d="m1 1 4 4 4-4"/>
                 </svg>
               </>
               <!-- Dropdown menu -->
-              <div
-                id="dropdownNavbar"
-                class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44"
-              >
-                <ul
-                  class="py-2 text-sm text-gray-700 dark:text-gray-400"
-                  aria-labelledby="dropdownLargeButton"
-                >
+              <div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44">
+                <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownLargeButton">
                   <li>
-                    <a
-                      href="per-daerah.html"
-                      class="block px-4 py-2 hover:bg-gray-100 hover:text-bahtera"
-                      >Data Per-daerah</a
-                    >
+                    <a href="per-daerah.html" class="block px-4 py-2 hover:bg-gray-100 hover:text-bahtera">Data Per-daerah</a>
                   </li>
                   <li>
-                    <a
-                      href="satu-dekade.html"
-                      class="block px-4 py-2 hover:bg-gray-100 hover:text-bahtera"
-                      >Data Satu Dekade</a
-                    >
+                    <a href="satu-dekade.html" class="block px-4 py-2 hover:bg-gray-100 hover:text-bahtera">Data Satu Dekade</a>
                   </li>
               </div>
-              <span
-                class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-sky-600"
-              ></span>
+              <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-sky-600"></span>
             </li>
             <li>
-              <a
-                href="program.html"
-                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600  nav-link"
-                >Program</a
-              >
+              <a href="program.html" class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link">Program</a>
             </li>
             <li>
-              <a
-                href="laporan.html"
-                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600  nav-link"
-                >Laporan</a
-              >
+              <a href="laporan.html" class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link">Laporan</a>
             </li>
             <li>
-              <a
-                href="tentangKami.html"
-                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600  nav-link"
-                >Tentang Kami</a
-              >
+              <a href="tentangKami.html" class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link">Tentang Kami</a>
             </li>
           </ul>
         </div>
@@ -150,27 +96,14 @@
     <!-- navbar end -->
 
     <!-- hero section -->
-    <div
-      id="default-carousel"
-      class="relative w-full h-screen carousel-offset z-0"
-      data-carousel="slide"
-    >
+    <div id="default-carousel" class="relative w-full h-screen carousel-offset z-0" data-carousel="slide">
       <div class="relative w-full h-full overflow-hidden">
-        <div class="bg-bahtera">.</div>
+        <div class="bg-black">.</div>
         <!-- gambar 1 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img
-            src="/src/img/gambar1.png"
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50"
-            alt="..."
-          />
-          <div
-            class="absolute inset-0 flex items-center justify-center"
-            data-aos="fade-up"
-          >
-            <p
-              class="text-white text-3xl lg:text-6xl font-bold italic text-center"
-            >
+          <img src="/src/img/gambar1.png" class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50" alt="..."/>
+          <div class="absolute inset-0 flex items-center justify-center" data-aos="fade-up">
+            <p class="text-white text-3xl lg:text-6xl font-bold italic text-center">
               "Kesetaraan dimulai <br />
               dengan menghapus kemiskinan"
             </p>
@@ -178,15 +111,9 @@
         </div>
         <!-- Gambar 2 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img
-            src="/src/img/gambar2.png"
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50"
-            alt="..."
-          />
+          <img src="/src/img/gambar2.png" class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50" alt="..."/>
           <div class="absolute inset-0 flex items-center justify-center">
-            <p
-              class="text-white text-3xl lg:text-6xl font-bold italic text-center"
-            >
+            <p class="text-white text-3xl lg:text-6xl font-bold italic text-center">
               "Setiap orang berhak <br />
               hidup sejahtera"
             </p>
@@ -194,15 +121,9 @@
         </div>
         <!-- Gambar 3 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-          <img
-            src="/src/img/gambar3.png"
-            class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50"
-            alt="..."
-          />
+          <img src="/src/img/gambar3.png" class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50" alt="..."/>
           <div class="absolute inset-0 flex items-center justify-center">
-            <p
-              class="text-white text-3xl lg:text-6xl font-bold italic text-center"
-            >
+            <p class="text-white text-3xl lg:text-6xl font-bold italic text-center">
               "Hidup layak <br />
               adalah hak semua orang"
             </p>
@@ -213,11 +134,8 @@
           <img
             src="/src/img/gambar4.png"
             class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50"
-            alt="..."
-          />
-          <div
-            class="absolute inset-0 flex items-center justify-center text-center"
-          >
+            alt="..."/>
+          <div class="absolute inset-0 flex items-center justify-center text-center">
             <p class="text-white text-3xl lg:text-6xl font-bold italic">
               "Peluang yang setara <br />
               harapan untuk semua"
@@ -229,12 +147,9 @@
           <img
             src="/src/img/gambar5.png"
             class="absolute block w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover brightness-50"
-            alt="..."
-          />
+            alt="..."/>
           <div class="absolute inset-0 flex items-center justify-center">
-            <p
-              class="text-white text-3xl lg:text-6xl font-bold font text-center italic"
-            >
+            <p class="text-white text-3xl lg:text-6xl font-bold font text-center italic">
               "Harapan baru dimulai <br />
               dengan mengatasi kemiskinan"
             </p>
@@ -280,54 +195,38 @@
           data-carousel-slide-to="4"
         ></button>
       </div>
-      <button
-        type="button"
-        class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-        data-carousel-prev
-      >
-        <span
-          class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
-        >
+      <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
           <svg
-            class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180"
+            class="w-4 h-4 text-white rtl:rotate-180"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
-            viewBox="0 0 6 10"
-          >
+            viewBox="0 0 6 10">
             <path
               stroke="currentColor"
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="M5 1 1 5l4 4"
-            />
+              d="M5 1 1 5l4 4"/>
           </svg>
           <span class="sr-only">Previous</span>
         </span>
       </button>
-      <button
-        type="button"
-        class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-        data-carousel-next
-      >
-        <span
-          class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
-        >
+      <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
           <svg
-            class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180"
+            class="w-4 h-4 text-white rtl:rotate-180"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
-            viewBox="0 0 6 10"
-          >
+            viewBox="0 0 6 10">
             <path
               stroke="currentColor"
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
+              d="m1 9 4-4-4-4"/>
           </svg>
           <span class="sr-only">Next</span>
         </span>
@@ -338,10 +237,7 @@
     <!-- Rngkasan -->
     <div class="container pt-10 lg:mx-auto md:mx-auto lg:mt-28 mb-10">
       <div class="flex flex-col md:flex-row items-center justify-center">
-        <div
-          class="w-full self-center px-4 md:w-1/2 lg:w-1/2 text-center"
-          data-aos="fade-right"
-        >
+        <div class="w-full self-center px-4 md:w-1/2 lg:w-1/2 text-center" data-aos="fade-right">
           <h1 class="text-4xl font-semibold text-center md:text-left">Kemiskinan di Indonesia</h1>
           <h2 class="font-medium text-xl mb-10 text-slate-600 mt-4 text-justify">
             Kemiskinan merupakan masalah yang kompleks dan berkaitan dengan berbagai
@@ -349,18 +245,9 @@
             kesehatan, pekerjaan yang layak, dan distribusi sumber daya yang
             tidak merata. Oleh karena itu, pemerintah Indonesia berupaya untuk membuat program yang berguna untuk mengurangi kemiskinan di Indonesia.
           </h2>
-          <a
-            href="program.html"
-            class="py-4 px-8 bg-bahtera hover:bg-blue-900 rounded-md text-white mb-4 text-lg font-medium hover:shadow-lg transition duration-300"
-          >
-            Lihat Program</a
-          >
+          <a href="program.html" class="py-4 px-8 bg-bahtera hover:bg-blue-900 rounded-md text-white mb-4 text-lg font-medium hover:shadow-lg transition duration-300">Lihat Program</a>
         </div>
-        <div
-          class="w-full self-center px-4 md:w-1/2 lg:w-1/2 mt-4 md:mt-0 md:ml-4"
-          data-aos="fade-up"
-     data-aos-anchor-placement="center-bottom"
-        >
+        <div class="w-full self-center px-4 md:w-1/2 lg:w-1/2 mt-4 md:mt-0 md:ml-4" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
           <img
             src="/src/img/image.png"
             alt=""
