--- a/content/program.html
+++ b/content/program.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="bg-bahtera fixed z-10 w-full transition duration-300 ease-in-out shadow-lg" id="navbar">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
           <span class="self-center text-4xl italic font-sans font-semibold whitespace-nowrap text-white" id="logo">Bahtera</span>
         </a>
         <button
@@ -78,7 +78,7 @@
                 class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44"
               >
                 <ul
-                  class="py-2 text-sm text-gray-700 dark:text-gray-400"
+                  class="py-2 text-sm text-gray-700"
                   aria-labelledby="dropdownLargeButton"
                 >
                   <li>
@@ -218,12 +218,12 @@
     <div class="flex flex-wrap justify-center">
       <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 lg:gap-12 md:grid-cols-2 lg:grid-cols-2 px-4">
         <!-- DKI JAKARTA -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-right" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/jakarta.png" alt="Jakarta">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">DKI JAKARTA</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Kartu Jakarta Pintar (KJP): Program bantuan pendidikan bagi anak-anak dari keluarga miskin agar mereka tetap bisa bersekolah. <br><br>
                 Kartu Lansia Jakarta (KLJ): Bantuan sosial bagi warga lansia yang tidak mampu, diberikan dalam bentuk uang tunai setiap bulan. <br><br>
                 Pembangunan Rusunawa (Rumah Susun Sederhana Sewa): Program ini menyediakan hunian layak dan terjangkau bagi warga yang tidak mampu. <br><br>
@@ -233,12 +233,12 @@
           </div>
         </div>
         <!-- JAWA BARAT -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-left" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/jawa-barat.png" alt="Jawa Barat">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA BARAT</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Program Desa Mandiri: Fokus pada pemberdayaan desa untuk mengoptimalkan potensi lokal melalui pertanian, peternakan, dan pariwisata desa. <br><br>
                 Samsara: Program bantuan permodalan untuk usaha mikro dan kecil, yang ditargetkan bagi pengusaha kecil di daerah pedesaan. <br><br>
                 Jaring Pengaman Sosial (JPS): Bantuan tunai dan non-tunai bagi masyarakat miskin yang terkena dampak bencana atau krisis ekonomi. <br><br>
@@ -248,12 +248,12 @@
           </div>
         </div>
         <!-- JAWA TENGAH -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-right" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/jawa-tengah.png" alt="Jawa Tengah">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA TENGAH</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Kartu Jateng Sejahtera (KJS): Program bantuan sosial yang ditujukan kepada masyarakat yang tergolong miskin atau rentan miskin. <br><br>
                 Bantuan Operasional Sekolah Daerah (BOSDA): Dana bantuan bagi sekolah-sekolah di daerah terpencil atau kurang mampu. <br><br>
                 Program Kredit Usaha Rakyat Daerah (KURDA): Program kredit mikro berbunga rendah yang disediakan oleh pemerintah daerah bagi pelaku usaha kecil dan menengah. <br><br>
@@ -263,12 +263,12 @@
           </div>
         </div>
         <!-- JAWA TIMUR -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-left" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/jawa-timur.png" alt="Jawa Timur">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA TIMUR</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Program Kelompok Usaha Bersama (KUBE): Program pemberdayaan masyarakat dalam bentuk kelompok usaha yang diberikan modal dan pelatihan. <br><br>
                 Bantuan Subsidi Beras Daerah (RASDA): Penyediaan beras bersubsidi bagi keluarga miskin agar ketahanan pangan tetap terjaga. <br><br>
                 Program Bantuan Langsung Tunai Daerah (BLT-D): Bantuan tunai bagi keluarga miskin yang terdampak kondisi ekonomi buruk atau krisis. <br><br>
@@ -278,12 +278,12 @@
           </div>
         </div>
         <!-- SUMATERA BARAT -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-right" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/sumatera-barat.png" alt="Sumatera Barat">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">SUMATERA BARAT</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Program Nagari Mandiri: Pengembangan desa mandiri berbasis potensi lokal, seperti pertanian, pariwisata, dan kerajinan tangan, untuk memberdayakan ekonomi masyarakat. <br><br>
                 Program Padat Karya: Penyediaan lapangan kerja bagi masyarakat miskin melalui proyek pembangunan infrastruktur di nagari-nagari. <br><br>
                 Gerakan Nagari Sejahtera: Program peningkatan kesejahteraan dengan dukungan akses modal, pelatihan kerja, dan pengembangan infrastruktur ekonomi lokal. <br><br>
@@ -293,12 +293,12 @@
           </div>
         </div>
         <!-- ACEH -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-left" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/aceh.png" alt="Aceh">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">ACEH</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Bantuan Usaha Mikro Aceh (BUMA): Program pemberian modal usaha dan pelatihan bagi pelaku usaha kecil untuk meningkatkan perekonomian daerah. <br><br>
                 Gerakan Pembangunan Ekonomi Aceh (GEMA): Fokus pada pengembangan sektor pertanian, perikanan, dan industri rumah tangga untuk menciptakan lapangan kerja dan meningkatkan pendapatan masyarakat. <br><br>
                 Program Keluarga Harapan Daerah (PKH-Aceh): Implementasi dari PKH nasional yang disesuaikan dengan kondisi lokal, memberikan bantuan kepada keluarga miskin dengan syarat tertentu. <br><br>
@@ -308,12 +308,12 @@
           </div>
         </div>
         <!-- PAPUA -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-right" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/papua.png" alt="Papua">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">PAPUA</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Program Pembangunan Masyarakat Kampung: Membangun infrastruktur dan memberikan pelatihan bagi masyarakat di kampung-kampung terpencil agar bisa mengembangkan ekonomi mandiri. <br><br>
                 Program Bantuan Modal Usaha Bagi Masyarakat Adat: Bantuan modal dan pelatihan bisnis bagi masyarakat adat agar dapat mengembangkan usaha lokal. <br><br>
                 Program Papua Sehat: Fokus pada peningkatan akses kesehatan di daerah-daerah terpencil melalui klinik bergerak dan bantuan obat-obatan. <br><br>
@@ -323,12 +323,12 @@
           </div>
         </div>
         <!-- NUSA TENGGARA TIMUR -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-left" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/ntt.png" alt="Nusa Tenggara Timur">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">NUSA TENGGARA TIMUR</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Program Desa Tangguh Bencana: Pengembangan infrastruktur dan pelatihan masyarakat untuk menghadapi bencana alam yang sering terjadi di wilayah ini. <br><br>
                 Program Pengembangan Pariwisata Berbasis Komunitas: Mendorong desa-desa wisata untuk mengelola potensi pariwisata alam agar dapat meningkatkan ekonomi lokal. <br><br>
                 Bantuan Kesehatan Ibu dan Anak: Program bantuan kesehatan bagi ibu hamil dan anak-anak di daerah terpencil yang sulit dijangkau oleh fasilitas kesehatan. <br><br>
@@ -338,12 +338,12 @@
           </div>
         </div>
         <!-- SULAWESI SELATAN -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-right" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/sulsel.png" alt="Sulawesi Selatan">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">SULAWESI SELATAN</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Gerakan Sulsel Bebas Kemiskinan (GSBK): Program terpadu yang mengintegrasikan sektor pendidikan, kesehatan, dan pemberdayaan ekonomi untuk mengurangi kemiskinan. <br><br>
                 Bantuan Modal dan Pelatihan bagi Nelayan: Memberikan pelatihan dan modal usaha kepada nelayan agar dapat meningkatkan hasil tangkapan dan pendapatan. <br><br>
                 Program Bantuan Pertanian Terpadu: Bantuan bagi petani dalam bentuk bibit unggul, alat pertanian, serta pelatihan teknik pertanian modern. <br><br>
@@ -353,12 +353,12 @@
           </div>
         </div>
         <!-- BALI -->
-        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
+        <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md mb-4" data-aos="fade-left" data-aos-duration="400">
           <img class="object-cover w-full h-64" src="/src/img/program/bali.png" alt="Bali">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">BALI</h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">
+              <p class="mt-2 text-sm text-gray-600">
                 Pengembangan Desa Wisata: Program pengentasan kemiskinan melalui pengembangan desa wisata berbasis budaya dan alam yang dikelola oleh masyarakat setempat. <br><br>
                 Program Pangan Lokal Bali: Meningkatkan ketahanan pangan melalui produksi dan promosi pangan lokal, termasuk upaya untuk mengurangi ketergantungan terhadap pangan impor. <br><br>
                 Bantuan Modal bagi UMKM Pariwisata: Pemberian bantuan modal usaha bagi UMKM yang bergerak di bidang pariwisata, kerajinan tangan, dan kuliner lokal. <br><br>
