--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bahtera - Per Daerah</title>
+    <title>Bahtera - Data Per Daerah</title>
     <link rel="stylesheet" href="/src/output.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
@@ -45,9 +45,9 @@
           class="flex items-center space-x-3 rtl:space-x-reverse"
         >
           <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-white"
+            class="self-center text-2xl font-semibold whitespace-nowrap text-white italic"
             id="logo"
-            >Web Kemiskinan</span
+            >Bahtera</span
           >
         </a>
         <button
