--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Data Kemiskinan</title>
+    <title>Bahtera - Data Satu Dekade</title>
     <link rel="stylesheet" href="/src/output.css"/>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css"/>
@@ -11,10 +11,10 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="bg-white fixed z-10 w-full transition duration-300 ease-in-out shadow-lg" id="navbar">
+    <nav class="bg-bahtera fixed z-10 w-full transition duration-300 ease-in-out shadow-lg" id="navbar">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="/content/beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <span class="self-center text-2xl font-semibold whitespace-nowrap text-black" id="logo">Web Kemiskinan</span>
+        <a href="beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white italic" id="logo">Bahtera</span>
         </a>
         <button
           data-collapse-toggle="navbar-menu"
@@ -44,13 +44,13 @@
             <li>
               <a
                 href="beranda.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Beranda</a>
             </li>
             <li
               id="dropdownNavbarLink"
               data-dropdown-toggle="dropdownNavbar"
-              class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between">
+              class="py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between">
               Data Kemiskinan
               <svg
                 class="w-2.5 h-2.5 ms-2.5"
@@ -88,17 +88,17 @@
             <li>
               <a
                 href="program.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link">Program</a>
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link">Program</a>
             </li>
             <li>
               <a
                 href="laporan.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link">Laporan</a>
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link">Laporan</a>
             </li>
             <li>
               <a
                 href="tentangKami.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
+                class="block py-2 px-3 text-white rounded transition-all duration-300 hover:text-gray-600 nav-link"
                 >Tentang Kami</a>
             </li>
           </ul>
