--- a/content/tentangKami.html
+++ b/content/tentangKami.html
@@ -12,7 +12,7 @@
   <nav class="bg-bahtera fixed z-10 w-full transition duration-300 ease-in-out shadow-lg top-0" id="navbar">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <span class="self-center text-4xl italic font-sans font-semibold whitespace-nowrap text-white" id="logo">Bahtera</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white italic" id="logo">Bahtera</span>
       </a>
       <button
         data-collapse-toggle="navbar-menu"
